# fragments-api-rust

./: Cargo.toml  README.md
docs/plans/: 2026-06-18-kafka-consumer-rust-design.md
src/: api.rs  dispatcher.rs  error.rs  lib.rs  main.rs  message.rs  model.rs  repository.rs  state.rs  worker.rs
tests/: api_tests.rs  model_tests.rs  repository_tests.rs  worker_tests.rs
